# range_v3_playground

./: .clang-tidy  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  NOTES.md  cppreference.imp  masked.cpp
benchmarks/: quick_bench.cpp
cmake/: masked_range-config.cmake.in
examples/: masked_bool.cpp  masked_int.cpp  soa_selection.cpp  soa_with_safety.cpp  soa_with_safety2.cpp  someclass.h  wrap_user.cpp
include/: AlignedAllocator.h  Branchless.h  IncompatibleZipException.h  PrSelection.h  PrintableNullSkin.h  SOAContainer.h  SOAContainerSet.h  SOADressedTuple.h  SOAField.h  SOAIterator.h  SOAIteratorRange.h  SOAObjectProxy.h  SOASkin.h  SOATypelist.h  SOATypelistUtils.h  SOAUtils.h  SOAView.h  ZipSelection.h  ZipTraits.h  ZipUtils.h  c++14_compat.h  gsl  stack_allocator.h  util  vectorwrapper.h
include/GaudiKernel/: GaudiException.h
include/SOAContainer/: .clang-format  AlignedAllocator.h  Branchless.h  PrintableNullSkin.h  SOAContainer.h  SOADressedTuple.h  SOAField.h  SOAIterator.h  SOAIteratorRange.h  SOAObjectProxy.h  SOASkin.h  SOATypelist.h  SOATypelistUtils.h  SOAUtils.h  SOAView.h  c++14_compat.h  stack_allocator.h  util
include/SOAExtensions/: ZipAlgorithms.h  ZipContainer.h  ZipSelection.h  ZipUtils.h
include/range/v3/view/: mask.hpp
test/: TestSelection.cpp  TestTrivialZip.cpp
